--- a/src/main.css
+++ b/src/main.css
@@ -31,8 +31,15 @@ h3 {
 
 #not-found, #home {
   text-align: center;
-  margin: 5vh auto;
-  max-width: 600px;
+  margin: 5vh 5vw;
+  padding: 1em;
+}
+
+@media screen and (min-width: 800px) {
+  #not-found, #home {
+	max-width: 600px;
+    margin: 5vh auto;
+  }
 }
 
 #home h1 {
@@ -46,19 +53,23 @@ h3 {
 }
 
 form#new-game {
-  margin: 3em;
+  margin: 3vh 3vw;
 }
 
 form#new-game button {
-  background: #85de6f;
+  margin: 0.25em;
+  background: #b1e773;
+  padding: 1em 10%;
   border: none;
-  font-size: 1em;
+  border-radius: 0.5em;
   cursor: pointer;
-  text-transform: uppercase;
-  padding: 5px 10px;
-  width: 120px;
+  font-size: 1em;
   height: 62px;
   vertical-align: top;
+}
+
+form#new-game button:hover {
+  background: #c3f18d;
 }
 
 input#game-id {
@@ -66,7 +77,7 @@ input#game-id {
   font-size: 1.3em;
   border: 1px #ddd solid;
   letter-spacing: .1em;
-  width: 350px;
+  width: 80%;
   height: 50px;
 }
 
