--- a/src/main.css
+++ b/src/main.css
@@ -293,7 +293,7 @@ input#game-id {
 }
 #chat-form input {
   flex: 1 0 auto;
-  padding: 0.75em;
+  padding: 0.25em;
   font-size: 1em;
   border-radius: 0.2em;
   border: 1px #BBB solid;
@@ -303,7 +303,7 @@ input#game-id {
   font-family: "Exo 2", sans-serif;
   font-size: 0.9em;
   background: #b1e773;
-  padding: 1em;
+  padding: 0.5em;
   border: none;
   border-radius: 0.2em;
   cursor: pointer;
@@ -327,7 +327,6 @@ input#game-id {
 }
 #button-row {
   flex: 0 0 auto;
-  margin: 1em 0;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -336,7 +335,7 @@ input#game-id {
 
 #button-row div {
   flex: 0 0 auto;
-  margin: 0 1em 0 0;
+  margin: 0.5em 0.5em 0 0;
 }
 
 #open-settings {
