--- a/src/main.css
+++ b/src/main.css
@@ -70,17 +70,19 @@ h3 {
 
 form#new-game {
   margin: 3vh 3vw;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 form#new-game button {
+  flex: 1;
   margin: 0.25em;
   background: #b1e773;
-  padding: 1em 10%;
+  padding: 1em 0.5em;
   border: none;
   border-radius: 0.5em;
   cursor: pointer;
   font-size: 1em;
-  height: 62px;
   vertical-align: top;
 }
 
@@ -89,12 +91,11 @@ form#new-game button:hover {
 }
 
 input#game-id {
+  flex: 5;
   padding: 0.2em 0.5em;
   font-size: 1.3em;
   border: 1px #ddd solid;
   letter-spacing: .1em;
-  width: 80%;
-  height: 50px;
 }
 
 #game-loading {
